# vibesrgb

./: .gitignore  Cargo.toml
assets/: razerkbd.json
src/: configurator.rs  main.rs
